--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -6,10 +6,24 @@ html(lang='en')
     title Webpack Template
   body
     .wrapper
-      h1 Webpack
-    div
-      h1 Section2!
-      img(src='/assets/images/1.jpg', alt='')
-    div
-      h1 Section2!
-      img(src='/assets/images/1.jpg', alt='')
+      .content
+        h1.content__title Title
+        .content__text
+          p lorem lorem lorem lorem lorem lorem lorem lorem lorem lorem lorem lorem lorem lorem lorem lorem lorem lorem lorem lorem lorem lorem lorem lorem lorem lorem lorem lorem lorem lorem lorem lorem
+      button.gmb-button(type="button")
+        .gmb-button__section
+      .gmb-menu-hide
+      .gmb-menu
+        button.gmb-button_close(type="button")
+        .gmb-menu__wrapper
+          ul.menu__list
+            li.menu__item
+              a.menu__link One
+            li.menu__item
+              a.menu__link Two
+            li.menu__item
+              a.menu__link Three
+            li.menu__item
+              a.menu__link Four
+            li.menu__item
+              a.menu__link Five
