--- a/src/styles/scss/blocks/intro.scss
+++ b/src/styles/scss/blocks/intro.scss
@@ -1,9 +1,168 @@
+//variables params
+$wrapperWidth: 768px;
+$gmbMenuWidth: 200px;
+$borderRadius: 5px;
+$animDuration: .45s;
+
+//variables colors
+$mainBGColor: #FFFAFA;
+$gmbMenuBorderColor: #808080;
+$textColor: #696969;
+$gmbButtonColorOpen: #A9A9A9;
+$gmbButtonColorClose: #FF4500;
+
+body {
+  background-color: #222;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .wrapper {
-    color: $default-color;
-    background-image: url('/assets/images/2.jpg');
-    width: 100%;
-    height: 500px;
-    @include tablet {
-        color: $main-color;
-    };
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  width: $wrapperWidth;
+  height: 90vh;
+  border: 2px solid $gmbMenuBorderColor;
+  border-radius: $borderRadius;
+  overflow: hidden;
+  background-color: $mainBGColor;
+  transition: $animDuration;
+}
+
+.wrapper_active {
+  background-color: $gmbButtonColorOpen;
+}
+
+.content {
+  width: 90%;
+  height: 90%;
+}
+
+.content__title {
+  margin: 5% 0;
+}
+
+.content__text {
+  color: $textColor;
+}
+
+//button
+.gmb-button, .gmb-button_close {
+  width: 50px;
+  height: 50px;
+  position: absolute;
+  background-color: transparent;
+  padding: 0;
+  border: 0;
+  outline: none;
+  cursor: pointer;
+}
+
+.gmb-button {
+  top: 50px;
+  right: 50px;
+  z-index: 10;
+}
+
+.gmb-button_close {
+  top: 25px;
+  right: 21px;
+  z-index: 10;
+}
+
+.gmb-button__section {
+  width: inherit;
+  height: 10px;
+  position: relative;
+  background-color: $gmbButtonColorOpen;
+  &:before, &:after {
+    content: "";
+    display: block;
+    width: inherit;
+    height: inherit;
+    background-color: inherit;
+    position: absolute;
+    left: 0;
+    transition: $animDuration;
+  }
+  &:before {
+    top: 20px;
+    transform-origin: 0px 0px;
+  }
+  &:after {
+    top: -20px;
+    transform-origin: 0px 10px;
+  }
+}
+
+//gamburger-menu
+.gmb-menu-hide {
+  display: none;
+  background-color: transparent;
+  position: absolute;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+}
+.gmb-menu {
+  width: $gmbMenuWidth;
+  height: 400px;
+  border-radius: $borderRadius;
+  position: absolute;
+  top: 25px;
+  right: -$gmbMenuWidth;
+  background-color: $mainBGColor;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.section_active {
+  background-color: transparent;
+  &:before, &:after {
+    background-color: $gmbButtonColorClose;
+    border-radius: $borderRadius;
+    width: 52px;
+  }
+  &:before {
+    transform: rotate(-45deg);
+  }
+  &:after {
+    transform: rotate(45deg);
+  }
+}
+
+.gmb-menu__wrapper {
+  width: 90%;
+  height: 50%;
+}
+
+.menu__list {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: space-between;
+  width: 100%;
+  height: 100%;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.menu__item {
+  margin-left: 20px;
+}
+
+.menu__link {
+  font-size: 24px;
+  color: $textColor;
+  cursor: pointer;
+  transition: $animDuration;
+  &:hover {
+    color: $gmbButtonColorClose;
+  }
 }
